--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-number-format": "^5.2.2"
+    "react-number-format": "^5.2.2",
+    "react-scripts": "^5.0.1"
   }
 }
